[build-system]
requires = ["setuptools", "wheel", "cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Restrict the set of builds to mirror the wheels available in Orange3.
skip = ["cp36-*", "cp37-*", "pp*", "*-musllinux_*"]
build-verbosity = 2
test-requires = ["pyqt5", "pytest"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
